--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,15 @@
-{% extends "layout.html" %}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Proba Proba</title>
+  <meta charset="UTF-8">
+</head>
+<body>
 
-{% block content %}
-  <main class="hero-section">
-    <div class="container">
-      
-      <div class="section-content">
-        <h2>Discover places near you.</h2>
-        <a href="#" class="btn-primary">Sign up</a>
-        <a href="{{ url_for('about') }}" class="btn-secondary">Learn more</a> 
-      </div>
+<h2>Zdravo beeeee!!!!!</h2>
+<h3>Здраво и на вас.</h2>
+<br>
+<img width=300 height=600 src='static\img\\filipche.jpg'/>"
 
-      <div class="section-device">
-        <img src="static/img/device.png">
-      </div>
-      
-      <div class="clearfix"></div>
-
-    </div>
-  </main>
-{% endblock %}
+</body>
+</html>
