--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Proba Proba</title>
+  <title>Проба за Вилипче</title>
   <meta charset="UTF-8">
 </head>
 <body>
